--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "duration": "^0.2.0",
     "figures": "1.7.0",
     "fibers": "^1.0.7",
-    "gherkin": "^4.0.0",
+    "gherkin": "4.0.0",
     "glob": "^7.0.0",
     "is-generator": "^1.0.2",
     "lodash": "^4.0.0",
